# emulight

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/8as/: CMakeLists.txt  file.cpp  main.cpp
src/8as/include/: file.hpp  reg.hpp  rval.hpp
src/potato8/: CMakeLists.txt  main.cpp  msg.cpp  vcpu.cpp  vcpu_opcode.cpp  vcpu_table.cpp  vgpu.cpp
src/potato8/include/: msg.hpp  tsq.hpp  vcpu.hpp  vgpu.hpp
src/potato8/include/packet/: framebuffer_update.hpp  key_press_packet.hpp
